--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.providerapp2">
 
     <uses-permission android:name="com.example.providerapp1.READ_DATABASE" />
+    <uses-permission android:name="com.example.providerapp1.WRITE_DATABASE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
